- Xbox controller support:
	- fixed aiming using the right stick
	- fixed player movement using left stick and dpad
	- calculating and updating the crosshair position when aiming with a controller
	- rebindable controller buttons, saving and loading of button bindings via config file
	- navigating the main menu and save/load screens using dpad or left stick
	
ABUSE-TOOL:
- extracting PCX images in SPEC files to modern image formats using OpenCV
	- extracting as individual files
	- extracting as tilemaps
	- extracting animations as individual files
	- extracting as a texture atlas using texture packing algorithm
	- handling transparency in different types of images
	- padding between images
	- outline around groups in a texture atlas
	- external color palettes(tints)
	- tilemap palettes for tile positions
	- extraction settings and list of files via "../abuse-tool/extract.txt"
	- printing to console trough a log, log file saved at "../abuse-tool/log.txt"
	- list of output texture files, image positions, sizes... saved at "../abuse-tool/texture_info.txt"
	- created a list of all available SPEC files containing images and added settings for individual SPEC files

# News for Abuse-XV 0.9 (unreleased)

- Xenoveritas's fork of the SDL version
- Change to CMake for easier cross-platform build support
- Builds under Windows now
- Move from SDL to SDL2:
  - Fullscreen is now the default using SDL2's windowed fullscreen
    (Currently there is no method to do "real" fullscreen)
  - OpenGL support is punted to SDL2 instead of being handled here
  - Which also gets DirectX support plus whatever other backends SDL2 can offer

# News for Abuse 0.8 (2011-05-09)

- Support for the original music packs!
- The fRaBs and main Abuse artwork were merged. Due to name conflicts in the
  level files, fRaBs save games will no longer work.
- 15 save slots instead of 5.
- The Lisp interpreter was heavily improved and now uses its garbage collected
  allocator instead of malloc.