@@ -259,14 +259,10 @@ void EventHandler::SysEvent(Event &ev)
     case SDL_KEYUP:
         // Default to EV_SPURIOUS
         ev.key = EV_SPURIOUS;
-        if(sdlev.type == SDL_KEYDOWN)
-        {
-            ev.type = EV_KEY;
-        }
-        else
-        {
-            ev.type = EV_KEYRELEASE;
-        }
+
+        if(sdlev.type == SDL_KEYDOWN) ev.type = EV_KEY;        
+        else ev.type = EV_KEYRELEASE;
+
         switch(sdlev.key.keysym.sym)
         {
         case SDLK_DOWN:         ev.key = JK_DOWN; break;
@@ -297,49 +293,57 @@ void EventHandler::SysEvent(Event &ev)
         case SDLK_F5:           ev.key = JK_F5; break;
         case SDLK_F6:           ev.key = JK_F6; break;
         case SDLK_F7:           ev.key = JK_F7; break;
-        case SDLK_F8:           ev.key = JK_F8; break;            
-        case SDLK_INSERT:       ev.key = JK_INSERT; break;
+		case SDLK_INSERT:       ev.key = JK_INSERT; break;
         case SDLK_KP_0:         ev.key = JK_INSERT; break;
         case SDLK_PAGEUP:       ev.key = JK_PAGEUP; break;
         case SDLK_PAGEDOWN:     ev.key = JK_PAGEDOWN; break;
         case SDLK_KP_8:         ev.key = JK_UP; break;
         case SDLK_KP_2:
-		case SDLK_KP_5:
-			ev.key = JK_DOWN; break;
-        case SDLK_KP_4:         ev.key = JK_LEFT; break;
-        case SDLK_KP_6:         ev.key = JK_RIGHT; break;
-		case SDLK_F9:
+		case SDLK_KP_5:			ev.key = JK_DOWN; break;
+		case SDLK_KP_4:         ev.key = JK_LEFT; break;
+		case SDLK_KP_6:         ev.key = JK_RIGHT; break;
+
+			//change settings, only handle key down
+
+		case SDLK_F8://AR toggle mouse scale			
+			if(ev.type == EV_KEY)
+			{
+				if(settings.mouse_scale==0) settings.mouse_scale = 1;
+				else settings.mouse_scale = 0;
+			}
+			ev.key = EV_SPURIOUS;
+			break;
+
+		case SDLK_F9://AR toggle controller aim
 			if(ev.type == EV_KEY) settings.ctr_aim = !settings.ctr_aim;
 			ev.key = EV_SPURIOUS;
-		break;   
-		case SDLK_F10:
-			//scale window
-            if(ev.type == EV_KEY) video_change_settings(0,true);
-            ev.key = EV_SPURIOUS;
 			break;
-        case SDLK_F11:
-            // Only handle key down
-			//scale window
-            if(ev.type == EV_KEY) video_change_settings(1,false);
-            ev.key = EV_SPURIOUS;
-            break;
-        case SDLK_F12:
-			// Only handle key down
-			//scale window
-            if(ev.type == EV_KEY) video_change_settings(-1,false);
-            ev.key = EV_SPURIOUS;
-            break;
-        case SDLK_PRINTSCREEN:    // print-screen key
-            // Only handle key down
-            if(ev.type == EV_KEY)
-            {
-                // Grab a screenshot
-                SDL_SaveBMP(surface, "screenshot.bmp");
-                the_game->show_help("Screenshot saved to: screenshot.bmp.\n");
-            }
-            ev.key = EV_SPURIOUS;
-            break;
-        default:
+
+		case SDLK_F10://toggle fullscreen, 			
+			if(ev.type == EV_KEY) video_change_settings(0,true);
+			ev.key = EV_SPURIOUS;
+			break;
+
+		case SDLK_F11://AR scale window up
+			if(ev.type == EV_KEY) video_change_settings(1,false);
+			ev.key = EV_SPURIOUS;
+			break;
+
+		case SDLK_F12://AR scale window down
+			if(ev.type == EV_KEY) video_change_settings(-1,false);
+			ev.key = EV_SPURIOUS;
+			break;
+
+		case SDLK_PRINTSCREEN://grab a screenshot
+			if(ev.type == EV_KEY)
+			{
+				SDL_SaveBMP(surface, "screenshot.bmp");
+				the_game->show_help("Screenshot saved to: screenshot.bmp.\n");
+			}
+			ev.key = EV_SPURIOUS;
+			break;
+
+		default:
 			//AR this will crash in game.cpp calling key_down() which can go up to 64
 			//so I set it to a random key which shouldn't do anything in the game
 			if((int)sdlev.key.keysym.sym>JK_MAX_KEY) ev.key = JK_MAX_KEY;
